syntax = "proto3";

package contactspb;

option go_package = "gitlab.stackroute.in/JitenP/golang-training-questglobal/contactspb";

message ContactIn{
    uint64 ID=1;
    string Name =2;
    string Address=3;
    string Email=4;
    string PhoneNumber=5;
    string Status=6;
    int64 LastModified=7;
}

message GeneralResponse{
    int32 code=1;
    string message=2;
}

service Contact{
    rpc Create(ContactIn) returns (GeneralResponse);
}